<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/back_black"

    android:foreground="@drawable/abc_item_background_holo_dark"
    android:id="@+id/location_targer">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <!-- Session image -->
    <ImageView android:id="@+id/store_photo_colored"

        android:layout_width="60dp"
        android:layout_height="80dp" />


    <!-- Info box -->
    <LinearLayout
        android:id="@+id/info_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:orientation="vertical">

        <!-- Session title -->
        <TextView android:id="@+id/store_title"
            style="@style/CategoryItem.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_update_title" />

        <!-- Subtitle -->
        <TextView android:id="@+id/store_subtitle_short"
            style="@style/CategoryItem.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_update_subtitle" />

        <!-- Abstract snippet -->
        <TextView android:id="@+id/store_snippet"
            style="@style/CategoryItem.Snippet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:text="@string/placeholder_update_snippet" />

    </LinearLayout>

</LinearLayout>
</FrameLayout>
