<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/bs_grid_bottom_padding"
    android:orientation="vertical"
    >
    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:background="@color/material_white"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

    <EditText
        android:id="@+id/findanything_editbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/ask_to_locate"
        android:enabled="false"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/findanything_editbox"
        android:orientation="horizontal">
        <Button
            android:id="@+id/findanythingwhatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/findanythingnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findanything"
            android:layout_weight="0.5"/>
    </LinearLayout>
    </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
